# customer-segmentation-retention

./: README.md  docker-compose.yml  pyproject.toml
research/: 01_eda.ipynb  02_etl_cleaning.ipynb  03_feature_engineering.ipynb  04_segmentation.ipynb  05_churn_clv.ipynb
src/csr/etl/: extract.py  transform.py
src/csr/exception/: exception.py
