[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-segmentation-retention"
version = "0.1.0"
description = "End-to-end ETL pipeline for customer segmentation and retention analysis on Online Retail II dataset"
authors = [{ name = "Hit Lathiya", email = "lathiyahit2005@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # data
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    "openpyxl>=3.1.0",

    # postgres
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",

    # feature engineering & ML
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.3.0",
    "lifetimes>=0.11.3",
    "mlxtend>=0.23.0",

    # explainability
    "shap>=0.45.0",

    # survival analysis
    "lifelines>=0.29.0",

    # api
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",

    # dashboard
    "streamlit>=1.35.0",
    "plotly>=5.22.0",

    # orchestration & experiment tracking
    "prefect>=2.19.0",
    "mlflow>=2.13.0",

    # config
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[project.scripts]
run-etl      = "src.csr.etl.pipeline:run"
run-features = "src.csr.features.build_features:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=src --cov-report=term-missing"

[tool.mlflow]
tracking_uri = "mlruns"